# supershift-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: supershift-ui-profile.example.json
src/supershift_mcp/: __init__.py  api.py  calendar.py  server.py  writer.py
tests/: test_calendar.py  test_writer.py
