[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supershift-mcp"
version = "0.1.0"
description = "MCP and HTTP bridge for Supershift calendar exports"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Steffen Stadler" }]
keywords = ["mcp", "supershift", "calendar", "shift-work", "ics"]
dependencies = [
  "icalendar>=6.1.0",
  "mcp>=1.12.4",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[project.scripts]
supershift-mcp = "supershift_mcp.server:main"
supershift-api = "supershift_mcp.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/supershift_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
